# compiler-construction

./: compiler.opam  dune-project
documentation/: design-decisions.md  grammar.md
lib/parsers/: parser.ml
lib/parsers/poly/: dune  lex.mll  par.mly  poly_parser.ml
lib/parsers/spl/: dune  lex.mll  par.mly  spl_parser.ml
lib/syntax/: ast.ml  expr.ml  type.ml
test/: compiler.ml  dune
